[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/status_effects/AirborneStatus.gd" type="Script" id=1]
[ext_resource path="res://assets/particles/smoke_particle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 55.0
initial_velocity_random = 0.15
angular_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="AirborneStatus" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["Airborne"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, 55 )
rotation = 4.71239
scale = Vector2( 2, 2 )
amount = 4
lifetime = 0.25
randomness = 0.4
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MaxDestroyedTimer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
[connection signal="timeout" from="MaxDestroyedTimer" to="." method="_on_MaxDestroyedTimer_timeout"]
